force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>The type of Account is determined by the Contract Contact Role that the Account has.</description>
    <inlineHelpText>What type of Account is it, a tenant, former tenant, owner or Account without contract?</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Former Tenant</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Account without contract</fullName>
            </value>
            <value>
                <fullName>Co-tenant</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Co tenant</fullName>
                <isActive>false</isActive>
                <label>Co tenant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>