force-app/main/default/objects/Account/fields/Administration_Id__c.field-meta.xml
<CustomField>
    <fullName>Administration_Id__c</fullName>
    <description>System where this account originated</description>
    <inlineHelpText>System where this account originated</inlineHelpText>
    <label>Administration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>