force-app/main/default/objects/Account/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <complianceGroup>GDPR (Financial)</complianceGroup>
    <description>Formula to show the IBAN of the selected Default Bank Account on this Account</description>
    <formula>Default_Bank_Account__r.IBAN__c</formula>
    <label>Bank Account</label>
    <type>Text</type>
</CustomField>