force-app/main/default/objects/Account/fields/Bankaccount__c.field-meta.xml
<CustomField>
    <fullName>Bankaccount__c</fullName>
    <formula>Default_Bank_Account__r.IBAN__c</formula>
    <label>Bankaccount</label>
    <type>Text</type>
</CustomField>