force-app/main/default/objects/Account/fields/Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Email__c</fullName>
    <description>Email address used by the company, imported from Wocas</description>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>