force-app/main/default/objects/Account/fields/Chamber_Of_Commerce_Number__c.field-meta.xml
<CustomField>
    <fullName>Chamber_Of_Commerce_Number__c</fullName>
    <description>Chamber of commerce (KvK) number of this organisation</description>
    <label>Chamber Of Commerce Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>