force-app/main/default/objects/Account/fields/Default_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Bank_Account__c</fullName>
    <complianceGroup>GDPR (Salesforce Id)</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current default bank account for this Account</description>
    <label>Default Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bank_Account__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Default For Accounts</relationshipLabel>
    <relationshipName>Default_For_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>