force-app/main/default/objects/Account/fields/Full_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Account_Name__c</fullName>
    <formula>Name &amp; &quot; &quot; &amp; LastName
&amp; &quot; &quot; &amp; Initials__pc
&amp; IF( ISBLANK(MiddleName), &quot;&quot;, &quot; &quot; &amp; MiddleName)
&amp; IF( ISBLANK(FirstName), &quot;&quot;, &quot; (&quot; &amp; FirstName &amp;&quot;)&quot;)
&amp; &quot; &quot; &amp; TEXT(Salutation)</formula>
    <label>Full Account Name</label>
    <type>Text</type>
</CustomField>