force-app/main/default/objects/Account/fields/Full_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Full_Billing_Street__c</fullName>
    <description>Full street name for primary billing</description>
    <formula>Primary_Billing_Address__r.Full_Street_Name__c</formula>
    <label>Full Billing Street</label>
    <type>Text</type>
</CustomField>