force-app/main/default/objects/Account/fields/Full_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Full_Shipping_City__c</fullName>
    <description>Address field to use in population of standard address fields on account</description>
    <formula>Primary_Shipping_Address__r.City__c</formula>
    <label>Full Shipping City</label>
    <type>Text</type>
</CustomField>