force-app/main/default/objects/Account/fields/Full_Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Full_Shipping_Country__c</fullName>
    <description>Address field to use in population of standard address fields on account</description>
    <formula>TEXT(Primary_Shipping_Address__r.Country__c)</formula>
    <label>Full Shipping Country</label>
    <type>Text</type>
</CustomField>