force-app/main/default/objects/Account/fields/Full_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Full_Shipping_Postal_Code__c</fullName>
    <description>Address field to use in population of standard address fields on account</description>
    <formula>Primary_Shipping_Address__r.Postal_Code__c</formula>
    <label>Full Shipping Postal Code</label>
    <type>Text</type>
</CustomField>