force-app/main/default/objects/Account/fields/Full_Shipping_Provence__c.field-meta.xml
<CustomField>
    <fullName>Full_Shipping_Provence__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Address field to use in population of standard address fields on account</description>
    <formula>TEXT(Primary_Shipping_Address__r.Province__c)</formula>
    <label>Full Shipping Provence</label>
    <type>Text</type>
</CustomField>