force-app/main/default/objects/Account/fields/Full_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Full_Shipping_Street__c</fullName>
    <formula>Primary_Shipping_Address__r.Full_Street_Name__c</formula>
    <label>Full Shipping Street</label>
    <type>Text</type>
</CustomField>