force-app/main/default/objects/Account/fields/Is_Creditor__c.field-meta.xml
<CustomField>
    <fullName>Is_Creditor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this account is a creditor, which puts limitations on its use</description>
    <inlineHelpText>When checked, this account is a creditor, which puts limitations on its use</inlineHelpText>
    <label>Is Creditor</label>
    <type>Checkbox</type>
</CustomField>