force-app/main/default/objects/Account/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>What is the Label associated with the Account through its Contracts?</description>
    <inlineHelpText>What is the Label associated with the Account through its Contracts?</inlineHelpText>
    <label>Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Woonstad</fullName>
            </value>
            <value>
                <fullName>Stadswonen</fullName>
            </value>
            <value>
                <fullName>Woonstad &amp; Stadswonen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>