force-app/main/default/objects/Account/fields/Mobile_Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Business_Phone__c</fullName>
    <description>Phone used by business account, imported from Wocas</description>
    <label>Mobile Business Phone</label>
    <type>Phone</type>
</CustomField>