force-app/main/default/objects/Account/fields/Nameplate__c.field-meta.xml
<CustomField>
    <fullName>Nameplate__c</fullName>
    <formula>TRIM(Initials__pc &amp; &quot; &quot; &amp; 
IF(ISBLANK(MiddleName), &quot;&quot;, MiddleName &amp; &quot; &quot;) &amp; 
LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nameplate</label>
    <type>Text</type>
</CustomField>