force-app/main/default/objects/Account/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <description>Type of organisation / Legal Form</description>
    <label>Organisation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>