force-app/main/default/objects/Account/fields/Primary_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Address at this moment</description>
    <label>Primary Billing Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Primary Billing Address for Accounts</relationshipLabel>
    <relationshipName>Primary_Billing_Address_for_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>