force-app/main/default/objects/Account/fields/Primary_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Shipping_Address__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary address record</description>
    <label>Primary Shipping Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Primary Shipping Address for Accounts</relationshipLabel>
    <relationshipName>Primary_Shipping_Address_For_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>