force-app/main/default/objects/Account/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <complianceGroup>GDPR (Financial)</complianceGroup>
    <description>VAT Number of this organisation</description>
    <label>VAT Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>