force-app/main/default/objects/Account/recordTypes/Industries_Person_Acc.recordType-meta.xml
<RecordType>
    <fullName>Industries_Person_Acc</fullName>
    <active>true</active>
    <description>industries Person Account for Record Type</description>
    <label>Industries Person Acc</label>
</RecordType>