force-app/main/default/objects/Account/validationRules/CorrectPhoneNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>CorrectPhoneNumber</fullName>
    <active>true</active>
    <description>Een eenvoudige controle op bestaanbaarheid van telefoonnummers in Nederland. Daarbij een foutmelding tonen als het nummer niet door de validatie komt. https://ict-woonstadrotterdam.atlassian.net/wiki/x/BQAuLQ</description>
    <errorConditionFormula>AND(
ISCHANGED(Phone),
NOT(
    OR(
        ISBLANK(Phone),
       
        AND(
            BEGINS(Phone, &quot;+&quot;),
            NOT(BEGINS(Phone, &quot;+0&quot;)),
            REGEX(Phone, &quot;^\\+?[1-9]{1}[0-9]*$&quot;)
        ),
      
        AND(
            OR(
                BEGINS(Phone, &quot;080&quot;),
                BEGINS(Phone, &quot;0900&quot;),
                BEGINS(Phone, &quot;0906&quot;),
                BEGINS(Phone, &quot;0909&quot;)
            ),
            OR(
                LEN(Phone) = 8,
                LEN(Phone) = 11
            ),
            NOT(LEN(Phone) = 10)
        ),
        
        AND(
            BEGINS(Phone, &quot;044&quot;),
            LEN(Phone) &gt;= 6,
            LEN(Phone) &lt;= 14
        ),
      
        AND(
            BEGINS(Phone, &quot;0&quot;),
            NOT(
                OR(
                    BEGINS(Phone, &quot;080&quot;),
                    BEGINS(Phone, &quot;0900&quot;),
                    BEGINS(Phone, &quot;0906&quot;),
                    BEGINS(Phone, &quot;0909&quot;),                    
                    BEGINS(Phone, &quot;044&quot;)
                )
            ),
            LEN(Phone) = 10
        ),
       
        AND(
            BEGINS(Phone, &quot;1&quot;),
            OR(
                LEN(Phone) = 3,
                LEN(Phone) = 4,
                LEN(Phone) = 5,
                LEN(Phone) = 6
            )
        ),
        
        REGEX(Phone, &quot;^[2-9]{1}[0-9]{2}[\\s.-]?[0-9]{3}[\\s.-]?[0-9]{4}$&quot;)
    )
)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Validate if the phone number is entered correctly. Spaces, slashes and brackets are not allowed.</errorMessage>
</ValidationRule>