force-app/main/default/objects/Account/validationRules/Validate_Dutch_Billing_Postal_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Dutch_Billing_Postal_Code</fullName>
    <active>true</active>
    <description>Checks the billing postal code</description>
    <errorConditionFormula>AND(
    ISPICKVAL(BillingCountryCode, &quot;NL&quot;),
    OR(
        AND(
            NOT(ISBLANK(BillingPostalCode)),
            NOT(REGEX(BillingPostalCode, &quot;^\\d{4}[ ]?[a-zA-Z]{2}$&quot;))
        )
    )
)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Invalid billing postal code. For a Dutch address, you should use the following format: 0000AA.</errorMessage>
</ValidationRule>