force-app/main/default/objects/Account/validationRules/Validate_Dutch_Shipping_Postal_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Dutch_Shipping_Postal_Code</fullName>
    <active>true</active>
    <description>Checks the shipping postal code</description>
    <errorConditionFormula>AND(
    ISPICKVAL(ShippingCountryCode, &quot;NL&quot;),
    OR(
        AND(
            NOT(ISBLANK(ShippingPostalCode)),
            NOT(REGEX(ShippingPostalCode, &quot;^\\d{4}[ ]?[a-zA-Z]{2}$&quot;))
        )
    )
)</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>Invalid shipping postal code. For a Dutch address, you should use the following format: 0000AA.</errorMessage>
</ValidationRule>