force-app/main/default/objects/Account/listViews/AddParticipantsListView.listView-meta.xml
<ListView>
    <fullName>AddParticipantsListView</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Mine</filterScope>
    <label>Add Participants View</label>
</ListView>